--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
 	"lint-staged": {
 		"*": "prettier --ignore-unknown --write"
 	},
+	"dependencies": {
+		"csp-header": "^5.2.1"
+	},
 	"devDependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
 		"@eslint/js": "^9.12.0",
@@ -62,6 +65,10 @@
 		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.8.0",
 		"vitest": "^2.1.2"
+	},
+	"peerDependencies": {
+		"@solidjs/start": "^1.0.8",
+		"vinxi": "^0.4.3"
 	},
 	"publishConfig": {
 		"provenance": true
