--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "ES2022"
+		"target": "ES2022",
+		"paths": {
+			"~/*": ["./src/*"]
+		}
 	},
 	"include": ["src"]
 }
