--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "ES2022",
-		"paths": {
-			"~/*": ["./src/*"]
-		}
+		"target": "ES2022"
 	},
 	"include": ["src"]
 }
