--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -7,7 +7,7 @@ jobs:
           fetch-depth: 0
       - uses: ./.github/actions/prepare
       - env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         uses: JoshuaKGoldberg/all-contributors-auto-action@v0.5.0
 
 name: Contributors
