--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/prepare
-      - run: pnpm run test --coverage
+      - run: pnpm run test --coverage --passWithNoTests
       - uses: codecov/codecov-action@v3
   type_check:
     name: Type Check
