--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,7 +35,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/35337607?v=4",
       "profile": "https://danieljcafonso.com",
       "contributions": [
-        "code"
+        "doc"
       ]
     }
   ],
