--- a/package.json
+++ b/package.json
@@ -14,12 +14,8 @@
 	"type": "module",
 	"exports": {
 		"./start": {
-			"import": "./dist/start/secure-headers/index.js",
-			"types": "./dist/start/secure-headers/index.d.ts"
-		},
-		"./start/csrf": {
-			"import": "./dist/start/csrf-protection.js",
-			"types": "./dist/start/csrf-protection.d.ts"
+			"import": "./dist/start/index.js",
+			"types": "./dist/start/index.d.ts"
 		},
 		"./start/csp": {
 			"import": "./dist/start/csp/index.js",
@@ -46,7 +42,8 @@
 		"*": "prettier --ignore-unknown --write"
 	},
 	"dependencies": {
-		"csp-header": "^5.2.1"
+		"csp-header": "^5.2.1",
+		"h3": "^1.15.1"
 	},
 	"devDependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
@@ -80,11 +77,7 @@
 		"vitest": "^2.1.2"
 	},
 	"peerDependencies": {
-		"@solidjs/start": "^1.0.9",
-		"h3": "^1.13.0"
-	},
-	"optionalDependencies": {
-		"vinxi": "^0.4.3"
+		"@solidjs/start": "^1.1.1"
 	},
 	"publishConfig": {
 		"provenance": true
