--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
 		"./start": {
 			"import": "./dist/start/index.js",
 			"types": "./dist/start/index.d.ts"
+		},
+		"./start/csp": {
+			"import": "./dist/start/csp/index.js",
+			"types": "./dist/start/csp/index.d.ts"
 		}
 	},
-	"main": "./dist/index.js",
 	"files": [
 		"dist/",
 		"package.json",
@@ -39,7 +42,8 @@
 		"*": "prettier --ignore-unknown --write"
 	},
 	"dependencies": {
-		"csp-header": "^5.2.1"
+		"csp-header": "^5.2.1",
+		"h3": "^1.15.1"
 	},
 	"devDependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
@@ -73,11 +77,7 @@
 		"vitest": "^2.1.2"
 	},
 	"peerDependencies": {
-		"h3": "^1.13.0"
-	},
-	"optionalDependencies": {
-		"@solidjs/start": "^1.0.9",
-		"vinxi": "^0.4.3"
+		"@solidjs/start": "^1.1.1"
 	},
 	"publishConfig": {
 		"provenance": true
