--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -10,7 +10,7 @@ jobs:
             allcontributors[bot]
             renovate
             renovate[bot]
-          ignore-team-members: false
+          ignore-team-members: true
 
 name: Compliance
 
